--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=gvim
-Comment="The vi editor for X Windows"
-Comment[pl]="Edytor vi dla X Windows"
+Comment="The vi editor for X Window"
+Comment[pl]="Edytor vi dla X Window"
 Exec=gvim.athena
 Terminal=0
 Icon=gnome-word.png
