--- a/gvim-gnome.desktop
+++ b/gvim-gnome.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=gvim
-Comment="The vi editor for X Windows with GNOME L&F"
-Comment[pl]="Edytor vi dla X Windows jako aplikacja GNOME"
+Comment="The vi editor for X Window with GNOME L&F"
+Comment[pl]="Edytor vi dla X Window jako aplikacja GNOME"
 Exec=gvim.gnome
 Terminal=0
 Icon=gnome-word.png
