- fixed caps convention in names (first always caps) - remowed unnecessary lang-specific names (identical with the general one) - fixed X Window System name (in general and pl Comments) - added some descriptions in Comment fields
Changed files:
    gvim-athena.desktop -> 1.4
    gvim-gnome.desktop -> 1.4
    gvim-gtk.desktop -> 1.4
    gvim-motif.desktop -> 1.4

--- a/gvim-gnome.desktop
+++ b/gvim-gnome.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=gvim
-Comment="The vi editor for X Window with GNOME L&F"
-Comment[pl]="Edytor vi dla X Window jako aplikacja GNOME"
+Name=Gvim
+Comment=The vi editor for X Window System with GNOME L&F
+Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GNOME
 Exec=gvim.gnome
 Terminal=0
 Icon=gnome-word.png
