--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=gvim
-Comment="The vi editor for X Window"
-Comment[pl]="Edytor vi dla X Window"
+Name=Gvim
+Comment=The vi editor for X Window System
+Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
 Terminal=0
 Icon=gnome-word.png
