--- a/gvim-gtk.desktop
+++ b/gvim-gtk.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=gvim
-Comment="The vi editor for X Window with GTK L&F"
-Comment[pl]="Edytor vi dla X Window jako aplikacja GTK"
+Name=Gvim
+Comment=The vi editor for X Window System with GTK L&F
+Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GTK
 Exec=gvim.gtk
 Terminal=0
 Icon=gnome-word.png
