- Changed Type: s@Applications/Editors@Application@. This type is _not_   an rpm Group:. NOTE: This file still sucks, because it uses icon from gnome-core and gvim-athena does not require it.
Changed files:
    gvim-athena.desktop -> 1.5

--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -5,6 +5,6 @@ Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
 Terminal=0
 Icon=gnome-word.png
-Type=Applications/Editors
+Type=Application
 Type[pl]=Aplikacje/Edytory
 # vi: encoding=utf-8
