- Type=Application, not Applications/something
Changed files:
    gvim-athena.desktop -> 1.6
    gvim-gnome.desktop -> 1.5
    gvim-gtk.desktop -> 1.5
    gvim-motif.desktop -> 1.5

--- a/gvim-gtk.desktop
+++ b/gvim-gtk.desktop
@@ -5,6 +5,5 @@ Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GTK
 Exec=gvim.gtk
 Terminal=0
 Icon=gnome-word.png
-Type=Applications/Editors
-Type[pl]=Aplikacje/Edytory
+Type=Application
 # vi: encoding=utf-8
