--- a/gvim-motif.desktop
+++ b/gvim-motif.desktop
@@ -5,6 +5,5 @@ Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja Motif
 Exec=gvim.motif
 Terminal=0
 Icon=gnome-word.png
-Type=Applications/Editors
-Type[pl]=Aplikacje/Edytory
+Type=Application
 # vi: encoding=utf-8
