--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=gvim
-Comment="The vi editor for X Windows"
-Comment[pl]="Edytor vi dla X Windows"
+Name=Gvim
+Comment=The vi editor for X Window System
+Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
 Terminal=0
 Icon=gnome-word.png
-Type=Applications/Editors
-Type[pl]=Aplikacje/Edytory
+Type=Application
+# vi: encoding=utf-8
