--- a/gvim-gtk.desktop
+++ b/gvim-gtk.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=gvim
-Comment="The vi editor for X Windows with GTK L&F"
-Comment[pl]="Edytor vi dla X Windows jako aplikacja GTK"
+Name=Gvim
+Comment=The vi editor for X Window System with GTK L&F
+Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GTK
 Exec=gvim.gtk
 Terminal=0
 Icon=gnome-word.png
-Type=Applications/Editors
-Type[pl]=Aplikacje/Edytory
+Type=Application
+# vi: encoding=utf-8
