--- a/gvim-motif.desktop
+++ b/gvim-motif.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=gvim
-Comment="The vi editor for X Windows with Motif L&F"
-Comment[pl]="Edytor vi dla X Windows jako aplikacja Motif"
+Name=Gvim
+Comment=The vi editor for X Window System with Motif L&F
+Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja Motif
 Exec=gvim.motif
 Terminal=0
 Icon=gnome-word.png
-Type=Applications/Editors
-Type[pl]=Aplikacje/Edytory
+Type=Application
+# vi: encoding=utf-8
