- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    gvim-athena.desktop -> 1.7
    gvim-gnome.desktop -> 1.7
    gvim-gtk.desktop -> 1.6
    gvim-motif.desktop -> 1.6

--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -3,7 +3,7 @@ Name=Gvim
 Comment=The vi editor for X Window System
 Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
-Terminal=0
+Terminal=false
 Icon=gnome-word.png
 Type=Application
 # vi: encoding=utf-8
