--- a/gvim-gnome.desktop
+++ b/gvim-gnome.desktop
@@ -3,7 +3,7 @@ Name=Gvim
 Comment=The vi editor for X Window System with GNOME L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GNOME
 Exec=gvim.gnome
-Terminal=0
+Terminal=false
 Icon=gnome-word.png
 Type=Application
 Categories=Application;TextEditor;
