--- a/gvim-motif.desktop
+++ b/gvim-motif.desktop
@@ -3,7 +3,7 @@ Name=Gvim
 Comment=The vi editor for X Window System with Motif L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja Motif
 Exec=gvim.motif
-Terminal=0
+Terminal=false
 Icon=gnome-word.png
 Type=Application
 # vi: encoding=utf-8
