--- a/gvim-gtk.desktop
+++ b/gvim-gtk.desktop
@@ -3,7 +3,7 @@ Name=Gvim
 Comment=The vi editor for X Window System with GTK L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GTK
 Exec=gvim.gtk
-Terminal=0
+Terminal=false
 Icon=gnome-word.png
 Type=Application
 # vi: encoding=utf-8
