--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -7,5 +7,5 @@ Exec=gvim.athena
 Terminal=false
 Icon=gnome-word.png
 Type=Application
-Categories=TextEditor
+Categories=Utilitiy;TextEditor;
 # vi: encoding=utf-8
