--- a/gvim-gnome.desktop
+++ b/gvim-gnome.desktop
@@ -7,5 +7,5 @@ Exec=gvim.gnome
 Terminal=false
 Icon=gnome-word.png
 Type=Application
-Categories=TextEditor
+Categories=Utilitiy;TextEditor;
 # vi: encoding=utf-8
