--- a/gvim-motif.desktop
+++ b/gvim-motif.desktop
@@ -7,5 +7,5 @@ Exec=gvim.motif
 Terminal=false
 Icon=gnome-word.png
 Type=Application
-Categories=Utility;TextEditor;
+Categories=Motif;TextEditor;
 # vi: encoding=utf-8
