--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Gvim
+Name=Gvim Athena
 Comment=The vi editor for X Window System
 Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
