- there's no vim.png supplied with package, use vim for autodetect
Changed files:
    vim.desktop -> 1.2

--- a/vim.desktop
+++ b/vim.desktop
@@ -9,7 +9,7 @@ Comment[pt_BR]=Editor visual incrementado
 Comment[ru]=Visual editor IMproved - ĺÄÉÎÓÔ×ĹÎÎĎ đŇÁ×ÉĚŘÎŮĘ ňĹÄÁËÔĎŇ :)
 Comment[tr]=Geliţmiţ bir vi sürümü
 Comment[uk]=Visual editor IMproved - ´ÄÉÎĎ ÷ŚŇÎÉĘ ňĹÄÁËÔĎŇ :)
-Icon=vim.png
+Icon=vim
 Exec=vim
 Terminal=true
 Type=Application
