- use generic icon
Changed files:
    gvim-athena.desktop -> 1.14
    gvim-gtk.desktop -> 1.13
    gvim-motif.desktop -> 1.13

--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -5,7 +5,7 @@ Comment=The vi editor for X Window System
 Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
 Terminal=false
-Icon=gnome-word.png
+Icon=vim
 Type=Application
 Categories=TextEditor;
 # vi: encoding=utf-8
