--- a/gvim-gtk.desktop
+++ b/gvim-gtk.desktop
@@ -5,7 +5,7 @@ Comment=The vi editor for X Window System with GTK L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GTK
 Exec=gvim.gtk
 Terminal=false
-Icon=gnome-word.png
+Icon=vim
 Type=Application
 Categories=GTK;TextEditor;
 # vi: encoding=utf-8
