--- a/gvim-motif.desktop
+++ b/gvim-motif.desktop
@@ -5,7 +5,7 @@ Comment=The vi editor for X Window System with Motif L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja Motif
 Exec=gvim.motif
 Terminal=false
-Icon=gnome-word.png
+Icon=vim
 Type=Application
 Categories=Motif;TextEditor;
 # vi: encoding=utf-8
