- we have no official vim icon, so let's use "text editor" on for now - mime type added for text/plain
Changed files:
    gvim-athena.desktop -> 1.15
    gvim-gnome.desktop -> 1.16
    gvim-gtk.desktop -> 1.14
    gvim-motif.desktop -> 1.14
    vim.desktop -> 1.3

--- a/gvim-motif.desktop
+++ b/gvim-motif.desktop
@@ -5,7 +5,8 @@ Comment=The vi editor for X Window System with Motif L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja Motif
 Exec=gvim.motif
 Terminal=false
-Icon=vim
+Icon=text-editor
+MimeType=text/plain;
 Type=Application
 Categories=Motif;TextEditor;
 # vi: encoding=utf-8
