--- a/vim.desktop
+++ b/vim.desktop
@@ -9,8 +9,9 @@ Comment[pt_BR]=Editor visual incrementado
 Comment[ru]=Visual editor IMproved - ĺÄÉÎÓÔ×ĹÎÎĎ đŇÁ×ÉĚŘÎŮĘ ňĹÄÁËÔĎŇ :)
 Comment[tr]=Geliţmiţ bir vi sürümü
 Comment[uk]=Visual editor IMproved - ´ÄÉÎĎ ÷ŚŇÎÉĘ ňĹÄÁËÔĎŇ :)
-Icon=vim
 Exec=vim
+Icon=text-editor
+MimeType=text/plain;
 Terminal=true
 Type=Application
 Encoding=UTF-8
