--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -5,7 +5,8 @@ Comment=The vi editor for X Window System
 Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
 Terminal=false
-Icon=vim
+Icon=text-editor
+MimeType=text/plain;
 Type=Application
 Categories=TextEditor;
 # vi: encoding=utf-8
