--- a/gvim-gnome.desktop
+++ b/gvim-gnome.desktop
@@ -5,7 +5,8 @@ Comment=The vi editor for X Window System with GNOME L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GNOME
 Exec=gvim.gnome
 Terminal=false
-Icon=vim
+Icon=text-editor
+MimeType=text/plain;
 Type=Application
 Categories=GTK;GNOME;TextEditor;
 # vi: encoding=utf-8
