- icons are in vim-rt package, so we can use them (see speedy change 3 days   ago)
Changed files:
    gvim-athena.desktop -> 1.16
    gvim-gnome.desktop -> 1.17
    gvim-gtk.desktop -> 1.15
    gvim-motif.desktop -> 1.15
    vim.desktop -> 1.4

--- a/gvim-gtk.desktop
+++ b/gvim-gtk.desktop
@@ -5,7 +5,7 @@ Comment=The vi editor for X Window System with GTK L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GTK
 Exec=gvim.gtk
 Terminal=false
-Icon=text-editor
+Icon=vim
 MimeType=text/plain;
 Type=Application
 Categories=GTK;TextEditor;
