--- a/vim.desktop
+++ b/vim.desktop
@@ -10,7 +10,7 @@ Comment[ru]=Visual editor IMproved - ĺÄÉÎÓÔ×ĹÎÎĎ đŇÁ×ÉĚŘÎŮĘ
 Comment[tr]=Geliţmiţ bir vi sürümü
 Comment[uk]=Visual editor IMproved - ´ÄÉÎĎ ÷ŚŇÎÉĘ ňĹÄÁËÔĎŇ :)
 Exec=vim
-Icon=text-editor
+Icon=vim
 MimeType=text/plain;
 Terminal=true
 Type=Application
