--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -5,7 +5,7 @@ Comment=The vi editor for X Window System
 Comment[pl]=Edytor vi dla Systemu X Window
 Exec=gvim.athena
 Terminal=false
-Icon=text-editor
+Icon=vim
 MimeType=text/plain;
 Type=Application
 Categories=TextEditor;
