--- a/gvim-gnome.desktop
+++ b/gvim-gnome.desktop
@@ -5,7 +5,7 @@ Comment=The vi editor for X Window System with GNOME L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GNOME
 Exec=gvim.gnome
 Terminal=false
-Icon=text-editor
+Icon=vim
 MimeType=text/plain;
 Type=Application
 Categories=GTK;GNOME;TextEditor;
