--- a/gvim-motif.desktop
+++ b/gvim-motif.desktop
@@ -5,7 +5,7 @@ Comment=The vi editor for X Window System with Motif L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja Motif
 Exec=gvim.motif
 Terminal=false
-Icon=text-editor
+Icon=vim
 MimeType=text/plain;
 Type=Application
 Categories=Motif;TextEditor;
