- ressurected text/plain mime type for vim (please fix kde problems in kde)
Changed files:
    vim.desktop -> 1.7

--- a/vim.desktop
+++ b/vim.desktop
@@ -11,6 +11,7 @@ Comment[tr]=Geliţmiţ bir vi sürümü
 Comment[uk]=Visual editor IMproved - ´ÄÉÎĎ ÷ŚŇÎÉĘ ňĹÄÁËÔĎŇ :)
 Exec=vim
 Icon=vim
+MimeType=text/plain;
 Terminal=true
 Type=Application
 Categories=ConsoleOnly;TextEditor;
