This commit was manufactured by cvs2git to create tag 'auto-ac-vim- 7_1_236-1'.
Sprout from master 2008-01-21 18:52:57 UTC Elan Ruusamäe <glen@pld-linux.org> '- everything can be added by pld'
Cherrypick from master 2007-11-08 22:47:16 UTC Elan Ruusamäe <glen@pld-linux.org> '- recognize YYYY-MM-DD format in Log':
    gvim-athena.desktop -> 1.16
    gvim-gnome.desktop -> 1.17
    gvim-gtk.desktop -> 1.15
    gvim-motif.desktop -> 1.15
    spec.vim -> 1.68
    vim.desktop -> 1.5
Cherrypick from unlabeled-1.407.2 2008-01-22 13:37:09 UTC Elan Ruusamäe <glen@pld-linux.org> '- vim-plugin-securemodelines is -rt dependency':
    vim.spec -> 1.407.2.7
Delete:
    vim-dosini.vim-hash_comment.patch
    vim-mysql.vim-syntax_comment.patch
    vim-noruntimeperl.patch
    vim-perl.vim-ftplugin_perldoc.patch
    vim-python.vim-ftplugin_pydoc.patch
    vim-ruby.vim-ftplugin_ri.patch

--- a/gvim-gtk.desktop
+++ b/gvim-gtk.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=Gvim GTK
 Comment=The vi editor for X Window System with GTK L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GTK
