--- a/vim.desktop
+++ b/vim.desktop
@@ -11,8 +11,8 @@ Comment[tr]=Geliţmiţ bir vi sürümü
 Comment[uk]=Visual editor IMproved - ´ÄÉÎĎ ÷ŚŇÎÉĘ ňĹÄÁËÔĎŇ :)
 Exec=vim
 Icon=vim
-MimeType=text/plain;
 Terminal=true
 Type=Application
+Encoding=UTF-8
 Categories=ConsoleOnly;TextEditor;
 # vi: encoding=utf-8
