--- a/gvim-athena.desktop
+++ b/gvim-athena.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=Gvim Athena
 Comment=The vi editor for X Window System
 Comment[pl]=Edytor vi dla Systemu X Window
