--- a/gvim-gnome.desktop
+++ b/gvim-gnome.desktop
@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=Gvim GNOME
 Comment=The vi editor for X Window System with GNOME L&F
 Comment[pl]=Edytor vi dla Systemu X Window jako aplikacja GNOME
